infra/terraform/rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "rabi-food-db-subnet-group"
  subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]

  tags = { Name = "rabi-food-db-subnet-group" }
}

resource "aws_security_group" "rds" {
  name        = "rabi-food-rds-sg"
  description = "Allow Postgres access from EC2 only"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Postgres from EC2"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs_tasks.id]
  }

  tags = { Name = "rabi-food-rds-sg" }
}

resource "aws_db_instance" "postgres" {
  identifier        = "rabi-food-postgres"
  engine            = "postgres"
  engine_version    = "17"
  instance_class    = "db.t3.micro"
  allocated_storage = 20

  db_name  = var.db_name
  username = var.db_user
  password = var.db_password

  db_subnet_group_name   = aws_db_subnet_group.main.name
  vpc_security_group_ids = [aws_security_group.rds.id]

  publicly_accessible = false
  skip_final_snapshot = true

  tags = { Name = "rabi-food-postgres" }
}
